--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <doctype html>
 <html>
     <head>
-        <title>TSC index page</tilte>
+        <meta charset="UTF-8">
+        <meta name='viewport' 
+            content="width=device-width, user-scalable=no, initial scale=1.0, maximum-scale=1.0 minimum-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <script type='javascript' src='app.js'></script>
+        <title>TSC index page</title>
     </head>
+    <body>
+        Hello
+    </body>
 </html>
