--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <script src='app.js'></script>
         <script src='Exerceise1.js'></script>
+        <script src='Execersise2.js'></script>
+        <script src='Classes.js'></script>
         <title>TSC index page</title>
     </head>
     <body>
