--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
         <meta name='viewport' 
             content="width=device-width, user-scalable=no, initial scale=1.0, maximum-scale=1.0 minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <script src='app.js'></script>
-        <script src='Exerceise1.js'></script>
-        <script src='Execersise2.js'></script>
-        <script src='Classes.js'></script>
+        <script src='node_modules/systemjs/dist/system-production.js'></script>
         <title>TSC index page</title>
     </head>
     <body>
